# mlx-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
mlx_dev_agent/: __init__.py  cli.py  config.py  conversation.py  engine.py
tests/: test_cli_utils.py  test_config.py  test_conversation.py  test_engine.py
